WHAT I HAVE DONE WHAT NEEDS TO BE DONE WHAT WORKS WHAT DOESNT WORK

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+    <h1 id="text"></h1>
     <button id="button1">DO NOT PRESS</button>
 </body>
 <script src="script.js" ></script>
