--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <h1 id="text"></h1>
-    <button id="button1">DO NOT PRESS</button>
+    <button class="button1"id="button1">DO NOT PRESS</button>
 </body>
 <script src="script.js" ></script>
 </html>
