--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 </head>
 
 <body>
+<div id="container" class="container">
     <h1 id="text"></h1>
     <button class="button1"id="button1">DO NOT PRESS</button>
+</div>
 </body>
 <script src="script.js" ></script>
 </html>
